MOD codigo limpio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Transacciones</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -29,12 +29,12 @@
           <span>Tipo de transacción:</span>
           <p>
             <label>
-              <input id="propertyIncome" class="with-gap" name="propertySelector" type="radio" value="income" checked />
+              <input id="propertyIncome" class="with-gap" name="propertySelector" type="radio" value="ingreso" checked />
               <span>Ingreso</span>
             </label>
           
             <label>
-              <input id="propertyExpense" class="with-gap" name="propertySelector" type="radio" value="expense"/>
+              <input id="propertyExpense" class="with-gap" name="propertySelector" type="radio" value="egreso"/>
               <span>Egreso</span>
             </label>
           </p>
@@ -52,7 +52,6 @@
           <div class="formField">
             <label for="propertyCategory">Categoría</label>
             <select id="propertyCategory" class="browser-default" name="propertyCategory">
-             
             </select>
           </div>
           <br>
